removed better foliage, connectivity, simple radio, sleep rework, and voice chat because of bugs

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ config/forgeendertech
 config/hwid
 servers.dat
 servers.dat_old
+config/jei/ingredient-list-mod-sort-order.ini
+config/jei/recipe-category-sort-order.ini
